Opened 12 years ago
Closed 12 years ago
#3544 closed defect (fixed)
--disable-asm does not disable inline asm
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | dirac |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
As reported in ticket #3540:
$ ./configure --disable-asm
$ grep HAVE_INLINE_ASM config.h config.mak config.h:#define HAVE_INLINE_ASM 1 config.h:#define HAVE_INLINE_ASM_LABELS 1 config.h:#define HAVE_INLINE_ASM_NONLOCAL_LABELS 1 config.h:#define HAVE_INLINE_ASM_DIRECT_SYMBOL_REFS 1 config.mak:HAVE_INLINE_ASM=yes config.mak:HAVE_INLINE_ASM_LABELS=yes config.mak:HAVE_INLINE_ASM_NONLOCAL_LABELS=yes config.mak:HAVE_INLINE_ASM_DIRECT_SYMBOL_REFS=yes
The define is used in many files in libavutil/x86 and libavcodec/x86.
This may not be a regression, the behaviour is at least reproducible with c8a4ae00.
Change History (1)
comment:1 by , 12 years ago
| Component: | build system → avcodec |
|---|---|
| Keywords: | dirac added |
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



I believe it is quite misleading that
HAVE_INLINE_ASMhas no connection to--disable-asmbut the asm code that was not protected byARCH_X86in dirac_arith.h was fixed in ea5423a0.