lavc/dirac_arith: Only compile x86 asm if ARCH_X86 is set.

Fixes ticket #3544.